--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,10 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
     </dependencies>
 
